# bevy

./: .gitignore  Cargo.toml
src/: crawler.rs  main.rs
src/crawlers/curve/: crv_tvl.rs
src/crawlers/uniswap/: liquidity.rs  uniswap_tvl.rs
