[package]
name = "bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version= "0.11.14", features = ["blocking", "json"]}
tokio = { version = "1.26.0", features = ["full"] }
dotenv = "0.15.0"
rust-crypto = "0.2.36"
log4rs = "1.2.0"
scraper = "0.15.0"